<resources>
    <string name="app_name">Bible Speaks</string>
    <string name="img">img</string>
    <string name="category">Category</string>
    <string name="prev">prev</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="textview">0 : 0</string>
    <string name="album">TextView</string>
    <string name="playing_song">playing song</string>
    <string name="text">Play at 4am-7am, 5pm-10pm</string>
    <string name="button">update</string>
</resources>